Fix page elements obscured by bottom nav bar on mobile

--- a/frontend/src/app/components/blocks-list/blocks-list.component.scss
+++ b/frontend/src/app/components/blocks-list/blocks-list.component.scss
@@ -6,7 +6,6 @@
 
 .container-xl {
   max-width: 1400px;
-  padding-bottom: 100px;
 }
 .container-xl.widget {
   padding-left: 0px;
